--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 }
 
 #preloader{
-  background: rgb(17 24 39) url(src/assets/loader.gif) no-repeat center center;
+  background: rgb(17 24 39) url(/assets/loader.gif) no-repeat center center;
   height: 100vh;
   width: 100%;
   position: fixed;
