--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,41 @@
 @tailwind utilities;
 @layer utilities {
   .bg-hacker {
-    background-image: url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcTJtMTR0d242bzFlOWc1Y3Qxc2ZmbXZ6dGc1eWUxdDNodjJ4OWhiZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oEjHWbXcpeKhTktXi/giphy.webp');
+    background-image: url("https://i.giphy.com/media/v1.Y2lkPTc5MGI3NjExaXVyb2YxN3dveWY5MmUzdGszeWVtODQxZ3Rsa3lhem52NXhsb2swbiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/12W5Sg2koWYnwA/giphy.gif");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
   }
+ .animation-terminal {
+  font-family: monospace;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  border-right: 1px  solid skyblue; 
+  animation: typing 3s steps(30, end), blink 0.75s step-end infinite;
 }
 
-#preloader{
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+}
+
+#preloader {
   background: rgb(17 24 39) url(/assets/loader.gif) no-repeat center center;
   height: 100vh;
   width: 100%;
   position: fixed;
   z-index: 100;
 }
-
-
